Contact page twig change

--- a/web/themes/custom/landing_theme/templates/page--node--1.html.twig
+++ b/web/themes/custom/landing_theme/templates/page--node--1.html.twig
@@ -16,7 +16,7 @@
           <ul>
             <li>Email: <a href="mailto:dudchenkobohdan@gmail.com">dudchenkobohdan@gmail.com</a></li>
             <li>LinkedIn: <a href="https://www.linkedin.com/in/bohdan-dudchenko/">Bohdan Dudchenko</a></li>
-            <li>Phone: <a href="tel:+380999306659">+380999306659</a></li>
+            <li>Phone: <a href="tel:0999306659">0999306659</a></li>
           </ul>
         </div>
       </div>
